fixed title align

--- a/sass.scss
+++ b/sass.scss
@@ -34,6 +34,7 @@
             .plan-title {
                 font-size: 24px;
                 margin: 50px 0 50px 0;
+                text-align: center;
             }
 
             .price {
