--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@
 .container .plans-container .plan .plan-title {
   font-size: 24px;
   margin: 50px 0 50px 0;
+  text-align: center;
 }
 .container .plans-container .plan .price {
   display: flex;
